tests/neg/semantic_pointer_arith_non_integer.baa
// EXPECT: عمليات المؤشرات المدعومة

صحيح الرئيسية() {
    صحيح س = ١.
    صحيح* م = &س.
    صحيح* ن = م + "س".
    إرجع ٠.
}
